--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
                             <div class="hero__text">
                                 <div class="info-block">
                                     <div class="info-block__subtitle">Your</div>
-                                    <h1 class="info-block__title info-block__title--underline">Summer Escape</h1>
+                                    <h1 class="info-block__title info-block__title--underline">
+                                        <span class="info-block__title-span">Summer Escape</span>
+                                    </h1>
                                     <p class="info-block__description">
                                         One of the greatest aspects of the sport of surfing is that you only need three things: your body, a surfbord and a wave.
                                     </p>
                                     <div class="info-block__action">
-                                        <a href="#" class="info-block__link">Read more</a>
+                                        <a href="#" class="info-block__link" data-js="readMore" data-target="hero">Read more</a>
                                     </div>
                                 </div>
                             </div>
@@ -90,7 +92,8 @@
 
 
             <!-- Showcase -->
-            <section class="page__section" data-location="events">
+            <section class="page__section">
+                <div class="page__anchor" data-location="events"></div>
                 <div class="page__container">
                     <div class="showcase">
                         <div class="showcase__block showcase__block--small">
@@ -101,7 +104,7 @@
                                         Want to catch a wave away from the crowds? From jungle-flanked point breaks in Colombia to secluded New Zealand coves, a global array of lesser-known surfing destinations are waiting to be discovered.
                                     </p>
                                     <div class="info-block__action">
-                                        <a href="#" class="info-block__link">Read more</a>
+                                        <a href="#" class="info-block__link" data-js="readMore" data-target="events">Read more</a>
                                     </div>
                                 </div>
                             </div>
@@ -115,7 +118,8 @@
 
 
             <!-- Boards Carousel -->
-            <section class="page__section page__section--tall" data-location="boards">
+            <section class="page__section page__section--tall">
+                <div class="page__anchor" data-location="boards"></div>
                 <div class="page__container page__container--large page__container--full-width">
                     <div class="page__section-heading">
                         <div class="info-block info-block--centered">
@@ -244,7 +248,8 @@
 
 
             <!-- Article 1 -->
-            <section class="page__section" data-location="stories">
+            <section class="page__section">
+                <div class="page__anchor" data-location="stories"></div>
                 <div class="page__container">
                     <article class="article">
                         <div class="article__body article__body--left">
@@ -255,7 +260,7 @@
                                     By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
                                 </p>
                                 <div class="info-block__action">
-                                    <a href="#" class="info-block__link">Read more</a>
+                                    <a href="#" class="info-block__link" data-js="readMore" data-target="training">Read more</a>
                                 </div>
                             </div>
                         </div>
@@ -284,7 +289,7 @@
                                     Point breaks can be very reliable under the right conditions, as the headland or point that contributes to the waves is fixed.
                                 </p>
                                 <div class="info-block__action">
-                                    <a href="#" class="info-block__link">Read more</a>
+                                    <a href="#" class="info-block__link" data-js="readMore" data-target="point">Read more</a>
                                 </div>
                             </div>
                         </div>
@@ -297,7 +302,8 @@
 
 
             <!-- Subscribe Area -->
-            <section class="page__section" data-location="contact">
+            <section class="page__section page__section--relative">
+                <div class="page__anchor" data-location="contact"></div>
                 <div class="page__subscribe-area">
                     <div class="separator page__separator">
                         <div class="separator__line"></div>
@@ -377,6 +383,97 @@
                 </div>
             </footer> 
         </div> <!-- Footer -END- -->
+
+
+
+
+        <div class="info-block">
+            <div class="info-block__subtitle">Your</div>
+            <h1 class="info-block__title info-block__title--underline">Summer Escape</h1>
+            <p class="info-block__description">
+                One of the greatest aspects of the sport of surfing is that you only need three things: your body, a surfbord and a wave.
+            </p>
+            <div class="info-block__action">
+                <a href="#" class="info-block__link" data-js="readMore" data-target="hero">Read more</a>
+            </div>
+        </div>
+
+
+        <div class="modal" data-modal="hero" hidden>
+            <div class="modal__container">
+                <div class="modal__action modal__action--right">
+                    <a class="modal__close-button" href="#" data-action="close"><i class="fas fa-times"></i></a>
+                </div>
+                <div class="info-block__subtitle info-block__subtitle--centered">Your</div>
+                <h2 class="modal__title info-block__title info-block__title--underline">
+                    <span class="info-block__title-span">Summer Escape</span>
+                </h2>
+                <div class="modal__body info-block__description">
+                    <p class="info-block__paragraph">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga dicta totam, quia nulla molestias deleniti enim tempore incidunt quibusdam explicabo.
+                    </p>
+                    <p class="info-block__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt laboriosam nobis, nulla quasi similique distinctio. Tenetur, accusamus similique. Dolores asperiores quam rerum blanditiis iste provident aliquid fugiat voluptate deleniti eligendi qui, voluptatem consequuntur. Sint assumenda veniam id totam suscipit doloribus error, vero, modi saepe voluptates numquam magnam tenetur omnis, aperiam adipisci porro odio obcaecati impedit officia. Reiciendis, officiis enim incidunt unde asperiores veniam ex veritatis eveniet nobis animi, dolorem vero tenetur exercitationem eius, omnis eaque assumenda aliquam vitae quo cupiditate. Quisquam repudiandae exercitationem, voluptatum explicabo id praesentium doloremque ab expedita maiores perferendis sequi cumque laudantium est harum laboriosam eaque fugiat. Ab consequuntur porro corrupti qui perferendis voluptates quasi molestiae, eos ullam in necessitatibus ad amet quod atque laboriosam architecto, delectus vitae quibusdam? Minus explicabo non excepturi dolore deserunt ratione culpa, voluptatibus, labore temporibus molestias qui consequuntur facilis necessitatibus est blanditiis omnis saepe aliquid consectetur at nesciunt neque reprehenderit magni expedita. A, vel ut ad ducimus quod cumque aspernatur debitis in omnis laudantium, blanditiis asperiores et explicabo quibusdam officia culpa possimus dolore! Aperiam illo eveniet nulla obcaecati at! Totam eius soluta est corporis tempore harum iure, quasi consequuntur. Ratione facere rerum excepturi fugit, perspiciatis quibusdam quo dolores explicabo, eveniet voluptas atque!</p>
+                    <p class="info-block__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ut illo minus tempora consequuntur similique reiciendis, eaque nesciunt, possimus quas tenetur quidem facilis? Tempore magnam, animi officia iure alias laborum a voluptate in distinctio quisquam itaque delectus placeat hic repellendus ad optio quia natus tempora eum, eaque omnis ea. Autem ipsa sequi voluptate accusamus dignissimos eaque quidem veritatis pariatur, animi laborum modi libero minus dolor dolore quo molestias sit corporis quaerat alias aliquid soluta ex nemo beatae omnis?</p>
+                    <div class="modal__action modal__action--left">
+                        <div class="info-block__action info-block__action">
+                            <a href="#" class="info-block__link" data-action="close">Return</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal__overlay" data-js="modalOverlay"></div>
+        </div>
+
+        <div class="modal" data-modal="events" hidden>
+            <div class="modal__container">
+                <div class="modal__action">
+                    <a class="modal__close-button" href="#" data-action="close"><i class="fas fa-times"></i></a>
+                </div>
+                <h2 class="modal__title">Discover New Locations</h2>
+                <div class="modal__body">
+                    <p class="modal__paragraph">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga dicta totam, quia nulla molestias deleniti enim tempore incidunt quibusdam explicabo.
+                    </p>
+                    <p class="modal__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt laboriosam nobis, nulla quasi similique distinctio. Tenetur, accusamus similique. Dolores asperiores quam rerum blanditiis iste provident aliquid fugiat voluptate deleniti eligendi qui, voluptatem consequuntur. Sint assumenda veniam id totam suscipit doloribus error, vero, modi saepe voluptates numquam magnam tenetur omnis, aperiam adipisci porro odio obcaecati impedit officia. Reiciendis, officiis enim incidunt unde asperiores veniam ex veritatis eveniet nobis animi, dolorem vero tenetur exercitationem eius, omnis eaque assumenda aliquam vitae quo cupiditate. Quisquam repudiandae exercitationem, voluptatum explicabo id praesentium doloremque ab expedita maiores perferendis sequi cumque laudantium est harum laboriosam eaque fugiat. Ab consequuntur porro corrupti qui perferendis voluptates quasi molestiae, eos ullam in necessitatibus ad amet quod atque laboriosam architecto, delectus vitae quibusdam? Minus explicabo non excepturi dolore deserunt ratione culpa, voluptatibus, labore temporibus molestias qui consequuntur facilis necessitatibus est blanditiis omnis saepe aliquid consectetur at nesciunt neque reprehenderit magni expedita. A, vel ut ad ducimus quod cumque aspernatur debitis in omnis laudantium, blanditiis asperiores et explicabo quibusdam officia culpa possimus dolore! Aperiam illo eveniet nulla obcaecati at! Totam eius soluta est corporis tempore harum iure, quasi consequuntur. Ratione facere rerum excepturi fugit, perspiciatis quibusdam quo dolores explicabo, eveniet voluptas atque!</p>
+                    <p class="modal__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ut illo minus tempora consequuntur similique reiciendis, eaque nesciunt, possimus quas tenetur quidem facilis? Tempore magnam, animi officia iure alias laborum a voluptate in distinctio quisquam itaque delectus placeat hic repellendus ad optio quia natus tempora eum, eaque omnis ea. Autem ipsa sequi voluptate accusamus dignissimos eaque quidem veritatis pariatur, animi laborum modi libero minus dolor dolore quo molestias sit corporis quaerat alias aliquid soluta ex nemo beatae omnis?</p>
+                </div>
+            </div>
+            <div class="modal__overlay" data-js="modalOverlay"></div>
+        </div>
+
+        <div class="modal" data-modal="training" hidden>
+            <div class="modal__container">
+                <div class="modal__action">
+                    <a class="modal__close-button" href="#" data-action="close"><i class="fas fa-times"></i></a>
+                </div>
+                <h2 class="modal__title">Surf Training</h2>
+                <div class="modal__body">
+                    <p class="modal__paragraph">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga dicta totam, quia nulla molestias deleniti enim tempore incidunt quibusdam explicabo.
+                    </p>
+                    <p class="modal__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt laboriosam nobis, nulla quasi similique distinctio. Tenetur, accusamus similique. Dolores asperiores quam rerum blanditiis iste provident aliquid fugiat voluptate deleniti eligendi qui, voluptatem consequuntur. Sint assumenda veniam id totam suscipit doloribus error, vero, modi saepe voluptates numquam magnam tenetur omnis, aperiam adipisci porro odio obcaecati impedit officia. Reiciendis, officiis enim incidunt unde asperiores veniam ex veritatis eveniet nobis animi, dolorem vero tenetur exercitationem eius, omnis eaque assumenda aliquam vitae quo cupiditate. Quisquam repudiandae exercitationem, voluptatum explicabo id praesentium doloremque ab expedita maiores perferendis sequi cumque laudantium est harum laboriosam eaque fugiat. Ab consequuntur porro corrupti qui perferendis voluptates quasi molestiae, eos ullam in necessitatibus ad amet quod atque laboriosam architecto, delectus vitae quibusdam? Minus explicabo non excepturi dolore deserunt ratione culpa, voluptatibus, labore temporibus molestias qui consequuntur facilis necessitatibus est blanditiis omnis saepe aliquid consectetur at nesciunt neque reprehenderit magni expedita. A, vel ut ad ducimus quod cumque aspernatur debitis in omnis laudantium, blanditiis asperiores et explicabo quibusdam officia culpa possimus dolore! Aperiam illo eveniet nulla obcaecati at! Totam eius soluta est corporis tempore harum iure, quasi consequuntur. Ratione facere rerum excepturi fugit, perspiciatis quibusdam quo dolores explicabo, eveniet voluptas atque!</p>
+                    <p class="modal__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ut illo minus tempora consequuntur similique reiciendis, eaque nesciunt, possimus quas tenetur quidem facilis? Tempore magnam, animi officia iure alias laborum a voluptate in distinctio quisquam itaque delectus placeat hic repellendus ad optio quia natus tempora eum, eaque omnis ea. Autem ipsa sequi voluptate accusamus dignissimos eaque quidem veritatis pariatur, animi laborum modi libero minus dolor dolore quo molestias sit corporis quaerat alias aliquid soluta ex nemo beatae omnis?</p>
+                </div>
+            </div>
+            <div class="modal__overlay" data-js="modalOverlay"></div>
+        </div>
+
+        <div class="modal" data-modal="point" hidden>
+            <div class="modal__container">
+                <div class="modal__action">
+                    <a class="modal__close-button" href="#" data-action="close"><i class="fas fa-times"></i></a>
+                </div>
+                <h2 class="modal__title">Point Break</h2>
+                <div class="modal__body">
+                    <p class="modal__paragraph">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga dicta totam, quia nulla molestias deleniti enim tempore incidunt quibusdam explicabo.
+                    </p>
+                    <p class="modal__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt laboriosam nobis, nulla quasi similique distinctio. Tenetur, accusamus similique. Dolores asperiores quam rerum blanditiis iste provident aliquid fugiat voluptate deleniti eligendi qui, voluptatem consequuntur. Sint assumenda veniam id totam suscipit doloribus error, vero, modi saepe voluptates numquam magnam tenetur omnis, aperiam adipisci porro odio obcaecati impedit officia. Reiciendis, officiis enim incidunt unde asperiores veniam ex veritatis eveniet nobis animi, dolorem vero tenetur exercitationem eius, omnis eaque assumenda aliquam vitae quo cupiditate. Quisquam repudiandae exercitationem, voluptatum explicabo id praesentium doloremque ab expedita maiores perferendis sequi cumque laudantium est harum laboriosam eaque fugiat. Ab consequuntur porro corrupti qui perferendis voluptates quasi molestiae, eos ullam in necessitatibus ad amet quod atque laboriosam architecto, delectus vitae quibusdam? Minus explicabo non excepturi dolore deserunt ratione culpa, voluptatibus, labore temporibus molestias qui consequuntur facilis necessitatibus est blanditiis omnis saepe aliquid consectetur at nesciunt neque reprehenderit magni expedita. A, vel ut ad ducimus quod cumque aspernatur debitis in omnis laudantium, blanditiis asperiores et explicabo quibusdam officia culpa possimus dolore! Aperiam illo eveniet nulla obcaecati at! Totam eius soluta est corporis tempore harum iure, quasi consequuntur. Ratione facere rerum excepturi fugit, perspiciatis quibusdam quo dolores explicabo, eveniet voluptas atque!</p>
+                    <p class="modal__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ut illo minus tempora consequuntur similique reiciendis, eaque nesciunt, possimus quas tenetur quidem facilis? Tempore magnam, animi officia iure alias laborum a voluptate in distinctio quisquam itaque delectus placeat hic repellendus ad optio quia natus tempora eum, eaque omnis ea. Autem ipsa sequi voluptate accusamus dignissimos eaque quidem veritatis pariatur, animi laborum modi libero minus dolor dolore quo molestias sit corporis quaerat alias aliquid soluta ex nemo beatae omnis?</p>
+                </div>
+            </div>
+            <div class="modal__overlay" data-js="modalOverlay"></div>
+        </div>
 
         <script src="./dist/js/vendors/flickity.min.js"></script>
         <script src="./dist/js/main.js"></script>
