--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 
             <!-- Boards Carousel -->
-            <section class="page__section page__section--tall">
+            <section class="page__section page__section--tall page__section--relative">
                 <div class="page__anchor" data-location="boards"></div>
                 <div class="page__container page__container--large page__container--full-width">
                     <div class="page__section-heading">
@@ -243,6 +243,7 @@
                         </div>
                     </div>
                 </div>
+                <img class="carousel__shadow" src="./images/shadow1.png" alt="">
             </section> <!-- Boards Carousel -END- -->
 
 
@@ -330,6 +331,7 @@
                         </form>
                     </div>
                 </div>
+                <img class="subscribe__shadow" src="./images/shadow2.png" alt="">
             </section> <!-- Subscribe Area -END- -->
 
 
