--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         </div>
                     </div>
 
-                    <div class="carousel" data-flickity='{ "wrapAround": true }'>
+                    <div class="carousel" data-flickity='{ "wrapAround": true, "imagesLoaded": true }'>
                         <div class="carousel__cell">
                             <div class="board-tile">
                                 <div class="board-tile__media">
