--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./dist/css/main.min.css">
         <title>Summer Surfing</title>
         <script src="https://kit.fontawesome.com/672b1edbdf.js" crossorigin="anonymous"></script>
+        <script src="./articles.local.js"></script>
     </head>
     <body class="page">
 
